[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tungstenite = { version = "0.33.0", features = ["tokio-rustls-webpki-roots"] }
clap = { version = "4.5.60", features = ["derive"] }
iced = { version = "0.14.0", features = ["tokio", "sipper"] }
rustls = "0.23.37"
serde_json = "1.0.149"
shared = { path = "../shared" }
tokio = { version = "1.50.0", features = ["time"] }
