[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
trace = "0.1.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
shared = { path = "../shared" }

[dependencies.uuid]
version = "1.22.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
